# PasteGo

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  clipboard.rs  db.rs  lib.rs
src/components/: ClipList.tsx  GenerateView.tsx  SettingsView.tsx
src/hooks/: useAI.ts  useClipboard.ts  useSelection.ts
src/types/: index.ts
