[package]
name = "app"
version = "0.3.1"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-shell = "2.3.5"
arboard = "3.6.1"
sha2 = "0.10.9"
hex = "0.4.3"
chrono = "0.4.44"
uuid = { version = "1.20.0", features = ["v4"] }
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["stream", "json"] }
futures-util = "0.3.32"
png = "0.18.1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tauri-plugin-global-shortcut = "2.3.1"
core-graphics = "0.24"
window-vibrancy = "0.7"
cocoa = "0.26"
objc = "0.2"
